<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ke.co.ipandasoft.mmaraumobileinfo.AtribsActivity"
    tools:showIn="@layout/activity_atribs">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_libraries_used"
            android:layout_width="match_parent"
            android:textColor="@color/cardview_light_background"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_libraries_used"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_libraries_data"
            android:layout_width="match_parent"
            android:textColor="@color/cardview_light_background"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="10dp"
            android:text="@string/tv_libraries_data"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info1"
                    android:textSize="20sp"
                    style="@style/card_layout_library_name"
                    android:text="@string/retrofit" />

                <TextView
                    android:id="@+id/tv_author1"
                    android:textSize="15sp"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info1"
                    android:text="@string/retrofit_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info2"
                    android:textSize="20sp"
                    style="@style/card_layout_library_name"
                    android:text="@string/picasso" />

                <TextView
                    android:id="@+id/tv_author2"
                    android:textSize="15sp"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info2"
                    android:text="@string/picasso_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info3"
                    android:textSize="20sp"
                    style="@style/card_layout_library_name"
                    android:text="@string/okhttp" />

                <TextView
                    android:id="@+id/tv_author3"
                    android:textSize="15sp"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info3"
                    android:text="@string/okhttp_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView4"
            style="@style/card_layout_about"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info4"
                    style="@style/card_layout_library_name"
                    android:textSize="20sp"
                    android:text="@string/gson" />

                <TextView
                    android:id="@+id/tv_author4"
                    style="@style/card_layout_library_author"
                    android:textSize="15sp"
                    android:layout_below="@id/tv_info4"
                    android:text="@string/gson_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView5"
            style="@style/card_layout_about"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info5"
                    style="@style/card_layout_library_name"
                    android:textSize="20sp"
                    android:text="@string/lovely" />

                <TextView
                    android:id="@+id/tv_author6"
                    style="@style/card_layout_library_author"
                    android:textSize="15sp"
                    android:layout_below="@id/tv_info5"
                    android:text="@string/lovely_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView6"
            style="@style/card_layout_about"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info6"
                    style="@style/card_layout_library_name"
                    android:textSize="20sp"
                    android:text="@string/html_parser" />

                <TextView
                    android:id="@+id/tv_author5"
                    style="@style/card_layout_library_author"
                    android:textSize="15sp"
                    android:layout_below="@id/tv_info6"
                    android:text="@string/html_author" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
