<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar" android:id="@+id/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
       android:padding="15dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:text="@string/about_us_detail"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:text="@string/like_us"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:id="@+id/privacy_policy"
            android:clickable="true"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/privacy"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:id="@+id/more_apps"
            android:clickable="true"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/more_apps"
            android:layout_height="40dp" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
